[package]
name = "deduplicator"
version = "0.1.0"
edition = "2021"
authors = ["Artem Shilin <xshiart@protonmail.com>"]

[[bin]]
name = "deduplicator"
path = "src/main.rs"

[lib]
name = "deduplicator"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.1"
log = "0.4.0"
env_logger = "0.8.0"
clap = { version = "4.0.32", features = ["derive", "unicode"] }
indicatif = "0.17.2"
